--- a/Contacts.html
+++ b/Contacts.html
@@ -58,7 +58,7 @@
                                           <p>T: +971-502109662</p>
                                           <p>Email: salahelmeky@gmail.com </p>
                                           <p>Email: elmekysalah@gmail.com </p>
-                                          <p><a href="https://github.com/safelmeky"> GetHub</a></p>
+                                          <p><a href="https://github.com/safelmeky"> GitHub</a></p>
                                           <p><a href="https://linkedin.com/in/salahaldeen-el-meky-34b476199"> Linkedin</a></p>
                                           <p></p>
 						</div>
@@ -92,7 +92,7 @@
                                                 <li><a href="https://github.com/safelmeky" class="icon brands style2 fa-github"><span class="label">GitHub</span></a></li>
                                                 <li><a href="https://linkedin.com/in/salahaldeen-el-meky-34b476199" class="icon brands style2 fa-linkedin"><span class="label">Linkedin</span></a></li>
 								<li><a href="Contacts.html" class="icon solid style2 fa-phone"><span class="label">Phone</span></a></li>
-								<li><a href="Contacts.html" class="icon solid style2 fa-envelope"><span class="label">Email</span></a></li>
+								<li><a href="Contacts.html" class="icon solid style2 fa-envelope"><span class="label">Email</span></a></li>4/+
                                           </ul>
                                     </section>
                                     <ul class="copyright">
