--- a/InProgress.html
+++ b/InProgress.html
@@ -23,7 +23,7 @@
 							<!-- Logo -->
 								<a href="index.html" class="logo">
                                                       <span class="symbol-box">
-                                                            <span class="symbol" style="font-size: 50px;"><span>&#9812;</span></span>
+                                                            <span class="symbol" style="font-size: 24px;"><span>&#9812;</span>Home Page</span>
                                                         </span>
                                                         <span class="title"></span>
 
@@ -58,7 +58,7 @@
 							<h1>In Progress Projects :</h1>
 							<!--<span class="image main"><img src="images/InProgress.jpg" alt="" /></span>-->
                                           <p></p>
-                                          <p><a href="https://github.com/safelmeky">Amazon web scraping using python.</a></p>
+                                          <p><a href="https://github.com/safelmeky">Preparing for the AWS practitioner exam</a></p>
                                           <p></p>
 						</div>
 					</div>
