--- a/ProjectList.html
+++ b/ProjectList.html
@@ -59,6 +59,7 @@
                                           <p><a href="SatisticalAnalysisIMDB.html">Statstical analysis on a Movies data set using (python).</a></p>
                                           <p><a href="CoronaDashboard.html">Global Corona Numberes Dashboard (Tableau).</a></p>
                                           <p><a href="MoviesDashboard.html">Movies Data Aggregation Dashboard(python).</a></p>
+                                          <p><a href="DataScrapingOnAmazon.html">Data scraping on an amazon Product Using BeautifulSoup (Python).</a></p>
 						</div>
 					</div>
 
