--- a/index.html
+++ b/index.html
@@ -106,18 +106,18 @@
 											<p>A Dashboard created using Python .</p>
 										</div>
 									</a>
-								<!-- </article>
+								 </article>
 								<article class="style6">
 									<span class="image">
 										<img src="images/pic06.jpg" alt="" />
 									</span>
-									<a href="generic.html">
-										<h2>Veroeros</h2>
+									<a href="DataScrapingOnAmazon.html">
+										<h2>Data scraping on an amazon Product Using BeautifulSoup (Python)</h2>
 										<div class="content">
-											<p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
+											<p></p>
 										</div>
 									</a>
-								</article>
+							<!--	</article>
 								<article class="style2">
 									<span class="image">
 										<img src="images/pic07.jpg" alt="" />
