--- a/Contacts.html
+++ b/Contacts.html
@@ -46,6 +46,7 @@
 							<li><a href="InProgress.html">In progress</a></li>
 						<!--	<li><a href="elements.html">Elments</a></li>-->
 							<li><a href="Contacts.html">Contact Me</a></li>
+                                          <li><a href="Resume.html">Resume</a></li>
 						</ul>
 					</nav>
 
@@ -92,7 +93,7 @@
                                                 <li><a href="https://github.com/safelmeky" class="icon brands style2 fa-github"><span class="label">GitHub</span></a></li>
                                                 <li><a href="https://linkedin.com/in/salahaldeen-el-meky-34b476199" class="icon brands style2 fa-linkedin"><span class="label">Linkedin</span></a></li>
 								<li><a href="Contacts.html" class="icon solid style2 fa-phone"><span class="label">Phone</span></a></li>
-								<li><a href="Contacts.html" class="icon solid style2 fa-envelope"><span class="label">Email</span></a></li>4/+
+								<li><a href="Contacts.html" class="icon solid style2 fa-envelope"><span class="label">Email</span></a></li>
                                           </ul>
                                     </section>
                                     <ul class="copyright">
