--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
 							<li><a href="InProgress.html">In progress</a></li>
 						<!--	<li><a href="elements.html">Elments</a></li>-->
 							<li><a href="Contacts.html">Contact Me</a></li>
+                                          <li><a href="Resume.html">Resume</a></li>
 						</ul>
 					</nav>
 
@@ -117,18 +118,18 @@
 											<p></p>
 										</div>
 									</a>
-							<!--	</article>
+							</article>
 								<article class="style2">
 									<span class="image">
-										<img src="images/pic07.jpg" alt="" />
+										<img src="images/DataDashboard.PNG" alt="" />
 									</span>
-									<a href="generic.html">
-										<h2>Ipsum</h2>
+									<a href="AnalysisOnDataProfissions.html">
+										<h2>Analysis on the current state of Data Professions</h2>
 										<div class="content">
-											<p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
+											<p>Cleaning- Aggregation Power BI (Dax)</p>
 										</div>
 									</a>
-								</article>
+								<!--	</article>
 								<article class="style3">
 									<span class="image">
 										<img src="images/pic08.jpg" alt="" />
