--- a/MoviesDashboard.html
+++ b/MoviesDashboard.html
@@ -46,6 +46,7 @@
 							<li><a href="InProgress.html">In progress</a></li>
 						<!--	<li><a href="elements.html">Elments</a></li>-->
 							<li><a href="Contacts.html">Contact Me</a></li>
+                                          <li><a href="Resume.html">Resume</a></li>
 						</ul>
 					</nav>
 
